--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
       <section class="inner-banner" style="background-image: url(images/about-banner.jpg);">
          <div class="title">
             <h2>About us</h2>
-            <p>Infinite possibilities bringing to your business</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
          </div>
       </section>
 
@@ -86,17 +86,17 @@
       <div class="abt-sec-1">
          <div class="container">
             <div class="row1">
-               <h2>Infinite possibilities<br> bringing to your business</h2>
-               <h6>Technology solution provider who offers innovative, secured, industry focused simple business solutions with focus on the healthcare industry.</h6>
+               <h2>Lorem Ipsum<br> simply dummy text of the printing</h2>
+               <h6>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</h6>
             </div>
             <div class="row2">
                <div class="img-blck" style="background-image: url(images/abt-img.jpg);">
                   <aside><h3>30+</h3><span>Years of experience</span></aside>
                </div>
-               <div class="content-blck"><p>With 30+ years of professional experience behind us, we have designed a robust, feature rich healthcare suite of software applications that can provide high value to our clients in pharmacy chain, supply chain, trading and distribution, warehouse management, inventory control, human resources, customer relations, financial accounts, fixed assets, e-Commerce, outpatient unit, multi-speciality medical center, and medical laboratory, radiology and optics. We simplify your business processes in healthcare management to help you focus on what’s really important, and care for your stakeholders, especially customers and employees, to the maximum.</p><br> 
-<p>We provide end to end solutions with a broad spectrum of applications on web and mobile platforms. Armed with a pool of professionals with techno-commercial expertise in the business domain as well as digital technologies, we help you understand customer requirements, and deliver the best suitable solutions on timely and professional manner. Our focus is on providing customers maximum satisfaction through true returns for their investments.  </p></div>
+               <div class="content-blck"><p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p><br> 
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.  </p></div>
             </div>
-            <div class="row3"><span><img src="images/square.png" alt=""></span><p>We are committed to providing the best possible integrated solutions that are simple and secure for operational efficiency, with automated workflows and improved customer care. </p></div>
+            <div class="row3"><span><img src="images/square.png" alt=""></span><p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p></div>
          </div>
       </div>
 
@@ -109,14 +109,14 @@
                      <div class="icon"><img src="images/eye.png" alt=""></div>
                      <div class="content">
                         <h4>Vision</h4>
-                        <p>Envisages attaining the global leader status in providing healthcare solutions by integrating newer technologies.</p>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</p>
                      </div>
                   </div>
                   <div class="grid1">
                      <div class="icon"><img src="images/mission.png" alt=""></div>
                      <div class="content">
                         <h4>Mission</h4>
-                        <p>Our vast industry experience and proven technical capabilities enable us to provide leading-edge intelligent IT solutions in the simplest forms, adopting ethical practices and leveraging the latest value-added technologies and services which are easily accessible and cost-effective.  To deploy efficient, impactful interventions that significantly improve efficiency.</p>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                      </div>
                   </div>
             </div>
@@ -127,7 +127,7 @@
             <div class="container">
                <div class="col-l">
                   <h3>Our clients</h3>
-                  <p>We ascertain our clients’ exact challenges, and provide them the most efficient and quality solutions.</p>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                </div>
                <div class="col-r">
                   <div class="client-slider">        <div><img src="images/clients/client-1.jpg" alt=""></div>
@@ -150,7 +150,7 @@
                               <h4 class="widget-title">Quick Links</h4>
                               <ul class="bullet4">
                                  <li><a href="about.html">About Us</a></li>
-                                 <li><a href="innsof-cutting-edge.html">Innsof Cutting Edge</a></li>
+                                 <li><a href="innsof-cutting-edge.html">Lorem Ipsum</a></li>
                                  <li><a href="our_specialities.html">Our Specialities</a></li>
                                  <li><a href="contact.html">Contact Us</a></li>
                                  <li><a href="careers.html">Careers</a></li>
@@ -239,7 +239,7 @@
                   <div class="container">
                      <div class="d-flex justify-content-center">
                         
-                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">innsof.com</a> </div>
+                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">aalambana.net</a> </div>
                      </div>
                   </div>
                </div>
