--- a/about.html
+++ b/about.html
@@ -199,32 +199,27 @@
                <h4 class="widget-title">Follow us</h4>
                <ul class="social-link">
                            <li class="social-link__item"> 
-                              <a href="#" target="_blank" class="social-list__link">
+                              <a href="https://www.facebook.com/" target="_blank" class="social-list__link">
                                  <span><img src="images/facebook.svg" alt="facebook"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="#" target="_blank" class="social-list__link">
+                              <a href="https://twitter.com/InfoAalambana" target="_blank" class="social-list__link">
                                  <span><img src="images/twitter.svg" alt="twitter"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="#" target="_blank" class="social-list__link">
+                              <a href="https://instagram.com/Aalambanasoftware?utm_medium=copy_link" target="_blank" class="social-list__link">
                                  <span><img src="images/instagram.svg" alt="instagram"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="#" target="_blank" class="social-link__link">
+                              <a href="https://www.linkedin.com/in/Aalambana/" target="_blank" class="social-link__link">
                                  <span><img src="images/linkedin.svg" alt="linkedin"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="#" target="_blank" class="social-link__link">
-                                 <span><img src="images/blog.svg" alt="blog"></span>
-                              </a>
-                           </li>
-                           <li class="social-link__item">
-                              <a href="#" target="_blank" class="social-link__link">
+                              <a href="https://Aalambana.wordpress.com/" target="_blank" class="social-link__link">
                                  <span><img src="images/wordpress.svg" alt="wordpress"></span>
                               </a>
                               </li>
