--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 <div class="colm-2">
                     <div class="addrs-block india fadeInUp animationDelay">
                         <h3><i><img src="images/india-flag.png" alt=""></i>India</h3>
-                        <p class="addrs">2420,Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                        <p class="addrs">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
                         <p class="mailid"><a href="mailto:info@Aalambana.net">info@Aalambana.net</a></p>
                         <p class="talephone"> <a href="tel:04954606416"><span>(Tel)</span> 000000000</a> <a href="tel:+91000000000"><span>(Mob)</span> +9100000000</a> </p>
                     </div>
@@ -463,7 +463,7 @@
                         <h3><i><img src="images/saudiarabia-flag.png" alt=""></i>Lorem</h3>
                         <p class="addrs">Contrary to popular belief,Lorem Ipsum is not simply random text.</p>
                         <p class="mailid"><a href="mailto:info@Aalambana.net">info@Aalambana.net</a></p>
-                        <p class="talephone"> <a href="tel:+966590884490"><span>(Mob)</span> +966 5908 84490</a> </p>
+                        <p class="talephone"> <a href="tel:+900000000"><span>(Mob)</span> +9100000000</a> </p>
                     </div>
                 </div>
                 <div class="colm-3 desk-view fadeInUp animationDelayMed">
