--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 </div>
                             </li>
                             <li class="nav-link" style="--i: 1.35s"> <a href="our_specialities.html">Our Specialities </a> </li>
-                            <li class="nav-link" style="--i: 1.1s">
+                            <!-- <li class="nav-link" style="--i: 1.1s">
                                 <a href="#">Solutions<i class="fas fa-caret-down"></i></a>
                                 <div class="dropdown">
                                     <ul>
@@ -113,7 +113,7 @@
                                         <div class="arrow"></div>
                                     </ul>
                                 </div>
-                            </li>
+                            </li> -->
                             <li class="nav-link" style="--i: 1.35s"> <a href="careers.html">Careers</a> </li>
                             <li class="nav-link" style="--i: 1.35s"> <a href="contact.html">Contact Us</a> </li>
                         </ul>
