--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
       </div> -->
 
       <div class="map">
-         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4653.59508522979!2d75.83281827914075!3d11.247324339100222!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb7d35b5655d9b4ec!2sHiLITE%20Builders!5e0!3m2!1sen!2sro!4v1637749531682!5m2!1sen!2sro" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.9228841592285!2d76.34805497459593!3d10.105398271213167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080ed846f66901%3A0xf93b9a29f09e9d9c!2sAalambana!5e0!3m2!1sen!2sin!4v1696578698467!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
          
       </div>
