--- a/contact.html
+++ b/contact.html
@@ -110,21 +110,21 @@
            <div class="addrs-block india fadeInUp animationDelay">
 			  <h3><i><img src="images/india-flag.png" alt=""></i>India</h3>
 			  <p class="addrs">Metro pillar no:30 Aluva, Ernakulam, Kerala - 683106</p>
-			  <p class="mailid"><a href="mailto:info@Aalambana.com">info@Aalambana.net</a></p>
+			  <p class="mailid"><a href="mailto:info@Aalambana.com">info@aalambana.net</a></p>
 			  <p class="talephone"> <a href="tel:+918547080910"><span>Mob</span> +91 854 708 0910</a> </p> 
 		  </div> 
 		  <div class="addrs-block qatar animationDelay">
 			 <h3><i><img src="images/qatar-flag.png" alt=""></i>Qatar</h3>
-			 <p class="addrs">Po box: 30442, Office no: 2, building 28, Street 840, Zone 24, Rawdhat Al Khail, Doha – Qatar</p>
+			 <p class="addrs">Lorem ipsum dolor sit amet consectetur adipiscing elit fermentum facilisis</p>
 			 <p class="mailid"><a href="mailto:info@Aalambana.com">info@aalambana.net</a></p>
 			 <p class="talephone"> <a href="tel:+97444364436"><span>Mob</span> +974 4436 4436</a> </p>
 		  </div>
-		  <div class="addrs-block uae animationDelay">
+		  <!-- <div class="addrs-block uae animationDelay">
 			 <h3><i><img src="images/uae-flag.png" alt=""></i>UAE</h3>
 			 <p class="addrs">Post box 331131, Sharjah, UAE</p>
 			 <p class="mailid"><a href="mailto:info@Aalambana.com">info@aalambana.net</a></p>
 			 <p class="talephone"> <a href="tel:+971509727479"><span>Mob</span> +971 50972 7479</a> </p>
-		  </div>
+		  </div> -->
 		</div>
 	 </div>
       <!-- <div class="cont-sec-2">
@@ -204,7 +204,7 @@
                      <button type="submit" class="btn1">Send Message</button>
                   </form>
                   </div>
-                       </div>
+                        </div>
             </div> 
             <div class="col-12 followus">
                <h4 class="widget-title">Follow us</h4>
@@ -266,5 +266,4 @@
       
    </body>
 
-<!-- Mirrored from www.Aalambana.com/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:47 GMT -->
 </html>
