--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
       <div class="cont-sec-2">
          <div class="container">
            <div class="addrs-block india fadeInUp animationDelay">
-			  <h3><i><img src="images/india-bg.jpg" alt=""></i>India</h3>
+			  <h3><i><img src="images/india-flag.png" alt=""></i>India</h3>
 			  <p class="addrs">Metro pillar no:30 Aluva, Ernakulam, Kerala - 683106</p>
 			  <p class="mailid"><a href="mailto:info@Aalambana.com">info@aalambana.net</a></p>
 			  <p class="talephone"> <a href="tel:+918547080910"><span>Mob</span> +91 854 708 0910</a> </p> 
