--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 </div>
                             </li>
                             <li class="nav-link" style="--i: 1.35s"> <a href="our_specialities.html">Our Specialities </a> </li>
-                            <!-- <li class="nav-link" style="--i: 1.1s">
+                            <li class="nav-link" style="--i: 1.1s">
                                 <a href="#">Solutions<i class="fas fa-caret-down"></i></a>
                                 <div class="dropdown">
                                     <ul>
@@ -113,7 +113,7 @@
                                         <div class="arrow"></div>
                                     </ul>
                                 </div>
-                            </li> -->
+                            </li>
                             <li class="nav-link" style="--i: 1.35s"> <a href="careers.html">Careers</a> </li>
                             <li class="nav-link" style="--i: 1.35s"> <a href="contact.html">Contact Us</a> </li>
                         </ul>
@@ -428,7 +428,7 @@
                         <div class="dot dot-1"></div>
                         <div class="dot dot-2"></div>
                         <div class="dot dot-3"></div>
-                        <div class="dot dot-4"></div>
+                        <div class="dot dot-4"></div> 
                         <div class="dot dot-5"></div>
                     </div>
                 </div>
@@ -488,7 +488,7 @@
                                     <h4 class="widget-title">Quick Links</h4>
                                     <ul class="bullet4">
                                         <li><a href="about.html">About Us</a></li>
-                                        <!-- <li><a href="Aalambana-cutting-edge.html">Aalambana Cutting Edge</a></li> -->
+                                        <li><a href="Aalambana-cutting-edge.html">Aalambana Cutting Edge</a></li>
                                         <li><a href="our_specialities.html">Our Specialities</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li><a href="careers.html">Careers</a></li>
@@ -502,9 +502,9 @@
                                         <li><a href="services_software_consulting.html">Software Consulting</a></li>
                                         <li><a href="services_web_applications.html">Web Applications</a></li>
                                         <li><a href="services_mob_applications.html">Mobile Apps</a></li>
-                                        <li><a href="services_data_analytics.html">Graphic Design</a></li>
+                                        <li><a href="services_data_analytics.html">Data & Analytics</a></li>
                                         <li><a href="services_digital_marketing.html">Digital Marketing</a></li>
-                                        <li><a href="services_cloud_transformation.html">Branding</a></li>
+                                        <li><a href="services_cloud_transformation.html">Cloud Transformation</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -513,8 +513,8 @@
                                     <h4 class="widget-title">Solutions</h4>
                                     <ul class="bullet5">
                                         <li><a href="erp_software.html"> ERP Software </a></li>
-                                        <!-- <li><a href="hrm_solutions.html"> HRM Software </a></li>
-                                        <li><a href="retail_pos_solutions.html"> Retail POS </a></li> -->
+                                        <li><a href="hrm_solutions.html"> HRM Software </a></li>
+                                        <li><a href="retail_pos_solutions.html"> Retail POS </a></li>
                                         <li><a href="ecommerce_solutions.html"> E-commerce </a></li>
                                     </ul>
                                 </div>
