--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
                               </ul>
                            </div>
                         </div>
-                        <div class="col-md-3 col-6">
+                        <!-- <div class="col-md-3 col-6">
                            <div class="footer-widget widget ">
                               <h4 class="widget-title">Solutions</h4>
                               <ul class="bullet5">
@@ -180,7 +180,7 @@
                                  <li><a href="ecommerce_solutions.html"> E-commerce </a></li>
                               </ul>
                            </div>
-                        </div>
+                        </div> -->
                          <div class="col-md-3 col-6">
                         <div class="footer-widget widget ">
                            <h4 class="widget-title">Get in Touch</h4>
