--- a/our_specialities.html
+++ b/our_specialities.html
@@ -207,7 +207,7 @@
                               </ul>
                            </div>
                         </div>
-                        <div class="col-md-3 col-6">
+                        <!-- <div class="col-md-3 col-6">
                            <div class="footer-widget widget ">
                               <h4 class="widget-title">Solutions</h4>
                               <ul class="bullet5">
@@ -217,7 +217,7 @@
                                  <li><a href="ecommerce_solutions.html"> E-commerce </a></li>
                                </ul>
                            </div>
-                        </div>
+                        </div> -->
                          <div class="col-md-3 col-6">
                         <div class="footer-widget widget ">
                            <h4 class="widget-title">Get in Touch</h4>
