--- a/our_specialities.html
+++ b/our_specialities.html
@@ -167,14 +167,14 @@
         <h3>Our clients</h3>
         <p>We ascertain our clients’ exact challenges, and provide them the most efficient and quality solutions.</p>
       </div>
-      <div class="col-r">
+      <!-- <div class="col-r">
         <div class="client-slider">        <div><img src="images/clients/client-1.jpg" alt=""></div>
         <div><img src="images/clients/client-2.png" alt=""></div>
         <div><img src="images/clients/client-3.png" alt=""></div>
         <div><img src="images/clients/client-4.png" alt=""></div>
         <div><img src="images/clients/client-5.png" alt=""></div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
