--- a/our_specialities.html
+++ b/our_specialities.html
@@ -144,7 +144,7 @@
       <ul class="bullet-1 ">
       <li> malesuada odio feugiat vivamus taciti imperdiet </li>
       <li> malesuada odio feugiat vivamus </li>
-      <li> dolor sit amet consectetur adipiscing elit vehicula, malesuada odio feugiat vivamus taciti </li>
+      <li> dolor sit amet consectetur adipiscing elit vehicula malesuada odio </li>
       <li> Lorem ipsum dolor sit amet consectetur adipiscing elit </li>
       <li> interdum aliquet erat vivamus congue ultrices duis sociosqu suspendisse </li>
       <li> malesuada odio feugiat vivamus taciti imperdiet  </li>
